--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Autocompletion</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="main.js"></script>   
+    
+</head>
+<body>
 
+    <input type="text" name="cast" id="year" placeholder="Date">
+    <!--Création du retour que PHP va donner-->
+    <div id="yearReturn"></div>
+    
+</body>
+</html>
