*Ajout d'un fichier css *Ajout de la recherche par filme     -> A CORRIGER!

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <title>Autocompletion</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="main.js"></script>   
     
 </head>
 <body>
-
-    <input type="text" name="cast" id="year" placeholder="Date">
+<div class="global">
+    <input type="text" name="year" id="year" placeholder="Date">
     <!--Création du retour que PHP va donner-->
     <div id="yearReturn"></div>
-    
+
+    <input type="text" name="cast" id="cast" placeholder="Film">
+    <div id="returnCast"></div>
+</div>
 </body>
 </html>
